@@ -1,3 +1,9 @@
+2016-12-12 Ben Shi <powerstudio1st AT 163 DOT com>
+
+	* src/SDCCast.c
+	* src/SDCCerr.c
+	  Fix incorrect error messages.
+
 2016-11-27 Philipp Klaus Krause <pkk AT spth.de>
 
 	* device/include/wchar.h,
